<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/HeaderTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_header" />

        <TextView
            style="@style/RegularTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guess_language_description" />

        <TextView
            style="@style/HeaderTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guess_language_header" />

        <org.libindic.render.IndicEditText
            android:id="@+id/edtGuessLanguage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_hint_enter_a_sentence" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guess_language_note" />

        <Button
            style="@style/RegularButton"
            android:id="@+id/btGetLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guess_language_button_get_language" />

        <TextView
            style="@style/LabelTextView"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guess_language_textview_details" />

        <TextView
            style="@style/RegularTextView"
            android:id="@+id/tvLanguageInfoResult"
            android:layout_margin="@dimen/layout_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
