<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/HeaderTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_header" />

        <TextView
            style="@style/RegularTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/uca_sort_description" />

        <TextView
            style="@style/HeaderTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/uca_sort_header" />

        <org.libindic.render.IndicEditText
            android:id="@+id/edtUCASort"
            android:hint="@string/edittext_hint_enter_a_sentence"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/RegularButton"
            android:id="@+id/btUCASort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uca_sort_button_sort" />

        <TextView
            style="@style/LabelTextView"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/uca_sort_results" />

        <org.libindic.render.IndicTextView
            style="@style/RegularTextView"
            android:id="@+id/tvSortedWords"
            android:layout_margin="@dimen/layout_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
