<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/HeaderTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_header" />

        <TextView
            style="@style/RegularTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_similarity_description" />

        <TextView
            style="@style/HeaderTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_similarity_header" />

        <EditText
            android:id="@+id/edtTextSimilarity1"
            android:hint="@string/edittext_hint_enter_a_sentence"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtTextSimilarity2"
            android:hint="@string/edittext_hint_enter_a_sentence"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/RegularButton"
            android:id="@+id/btTextSimilarityCompare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_similarity_button_compare" />

        <TextView
            style="@style/LabelTextView"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_similarity_compare_results" />

        <TextView
            style="@style/RegularTextView"
            android:id="@+id/tvTextSimilarityResult"
            android:layout_margin="@dimen/layout_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
