<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/HeaderTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_header" />

        <TextView
            style="@style/RegularTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hyphenation_description" />

        <TextView
            style="@style/HeaderTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hyphenation_with_hyphenation" />

        <WebView
            android:id="@+id/webview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/HeaderTextView"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hyphenation_without_hyphenation" />

        <WebView
            android:id="@+id/webview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/HeaderTextView"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hyphenation_with_hyphenation_sample_1" />

        <WebView
            android:id="@+id/webview3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
